--- a/ce/main.tf.example
+++ b/ce/main.tf.example
@@ -73,16 +73,6 @@ locals {
   }
 }
 
-data "tfe_outputs" "vault" {
-  organization = "cklewar"
-  workspace    = "aws-vault-module"
-}
-
-data "vault_aws_access_credentials" "creds" {
-  backend = data.tfe_outputs.vault.values.backend
-  role    = data.tfe_outputs.vault.values.role
-}
-
 provider "volterra" {
   api_p12_file = format("%s/%s", var.root_path, var.f5xc_api_p12_file_absolute)
   url          = var.f5xc_api_url
@@ -95,6 +85,21 @@ provider "aws" {
   region     = var.f5xc_aws_region
   access_key = data.vault_aws_access_credentials.creds.access_key
   secret_key = data.vault_aws_access_credentials.creds.secret_key
+}
+
+provider "vault" {
+  alias = "default"
+}
+
+data "tfe_outputs" "vault" {
+  organization = "cklewar"
+  workspace    = "aws-vault-module"
+}
+
+data "vault_aws_access_credentials" "creds" {
+  backend  = data.tfe_outputs.vault.values.backend
+  role     = data.tfe_outputs.vault.values.role
+  provider = "vault.default"
 }
 
 module "f5xc_aws_cloud_ce_single_node_single_nic_new_vpc_new_subnet" {
